2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add a subsection about _BV().

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io.h: add documentation.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: Black magic to split a long table.
	* doc/api/interrupts.dox: minor changes and additions.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* domake: Allow for environmental override of ${MAKE}.

2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* reconf: Extend the automake/autoconf checks to allow for
		customized executable names for the versions required.

2002-08-09  Theodore A. Roth  <troth@verinet.com>

	* reconf: Check for correct versions of automake/autoconf.

2002-08-09  Theodore A. Roth  <troth@verinet.com>

	* .cvsignore: New file.
	* crt1/.cvsignore: New file.
	* doc/.cvsignore: New file.
	* doc/api/.cvsignore: New file.
	* libc/.cvsignore: New file.
	* libc/misc/.cvsignore: New file.
	* libc/pmstring/.cvsignore: New file.
	* libc/stdlib/.cvsignore: New file.
	* libc/string/.cvsignore: New file.
	* libm/.cvsignore: New file.
	* libm/fplib/.cvsignore: New file.

2002-08-09  Theodore A. Roth  <troth@verinet.com>

	* doc/api/Makefile.am(EXTRA_DIST): Add new dox files.
	* doc/api/interrupts.dox: New file.
	* doc/api/acknowledge.dox: New file.
	* include/avr/interrupt.h: Added doxy comments.
	* include/avr/signal.h: Updated doxy comments.

2002-08-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: restructure to make the docs targets depend on
		actual files as opposed to .phony targets.

2002-08-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add Q/A about early initialization.

2002-08-05  Theodore A. Roth  <troth@verinet.com>

	* libc/pmstring/strcasecmp_P.S: remove redundant sentence about return
		value.
	
2002-08-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/inline_asm.dox: bump nesting level by one to